<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:scrollbars="none"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Quiz4Activity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_q7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/q7"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q7_1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:text="@string/java"
        android:textSize="16dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q7_2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:text="@string/kot"
        android:textSize="16dp" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q7_3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:text="@string/android"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q7_4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:text="@string/kt"
        android:textSize="16dp" />

     <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_q6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
         android:text="@string/q8"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q8_1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/mainactivity_java"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q8_2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/android_manifest_xml"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q8_3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_main_xml"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/q8_4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/build_gradle"
        android:background="@drawable/bg_questions"
        android:gravity="center"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_start_btn"
        android:onClick="nextScreen4"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Next"
        android:drawableRight="@drawable/ic_next"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16dp" />
</LinearLayout>
</ScrollView>