<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Quiz2Activity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q3"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Java network interface"
            android:textSize="16dp" />
    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/jni"
            android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Java interface"
            android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=" Image editable tool"
            android:textSize="16dp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_q4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/q4"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Android packages"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Android Pack"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Android packaging kit"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="None of the above."
            android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_start_btn"
        android:onClick="nextScreen2"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:text="next"
        android:drawableRight="@drawable/ic_next"
        android:textColor="@android:color/white"
        android:textSize="18dp" />
</LinearLayout>
</ScrollView>